--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+#端口号
 server.port=8081
+#数据源
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/bank?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#POJO自动扫描包
 mybatis.type-aliases-package=com.phoenix.springboot.pojo
+#指定mapper.xml路径
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#打印sql
+logging.level.com.phoenix.springboot.mapper=debug
